Implement state pattern for Snippetcontroller